# qt-floppy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: fdccontrollerwidget.cpp  fdccontrollerwidget.h  floppydiskwidget.cpp  floppydiskwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
